<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rob599_hw3</name>
  <version>0.0.0</version>
  <description>Files for Rob599 HW 3</description>
  <maintainer email="schofier@oreognstate.edu">ryan</maintainer>
  <license>BSD-3 Clause</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>

   <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_cartographer</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>

  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  
</package>
